Technically it's a lightbox

--- a/lightboxing.scss
+++ b/lightboxing.scss
@@ -4,5 +4,13 @@
 	left:0;
 	height:100%;
 	width:100%;
-	background-color:rgba(0,0,0,0.85);
+	background-color:rgba(0,0,0,0.9);
+}
+#xyzframe {
+	border:25px solid #fff;
+	position:absolute;
+}
+
+.xyzimg {
+	
 }
