--- a/css/lightboxing.css
+++ b/css/lightboxing.css
@@ -4,4 +4,8 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.85); }
+  background-color: rgba(0, 0, 0, 0.9); }
+
+#xyzframe {
+  border: 25px solid white;
+  position: absolute; }
