--- a/css/lightboxing.css
+++ b/css/lightboxing.css
@@ -8,4 +8,6 @@
 
 #xyzframe {
   border: 25px solid white;
-  position: absolute; }
+  position: absolute;
+  background-color: #fff;
+  border-radius: 20px; }
