--- a/lightboxing.scss
+++ b/lightboxing.scss
@@ -11,8 +11,10 @@
 	position:absolute;
 	background-color:#fff;
 	border-radius:20px;
+	width:40px;
+	height:40px;
 }
 
 .xyzimg {
-	
+	max-width:100%;
 }
